k8s/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: deepframe
  labels:
    app: open-webui-dev
    run: open-webui-dev
spec:
  selector:
    matchLabels:
      app: open-webui-dev
      run: open-webui-dev
  template:
    metadata:
      labels:
        app: open-webui-dev
        run: open-webui-dev
    spec:
      containers:
        - name: open-webui
          image: 262740798135.dkr.ecr.us-east-2.amazonaws.com/deepframe/open-webui:9c9d27dff
          volumeMounts:
            - name: fsx-data
              mountPath: /data
      volumes:
        - name: fsx-data
          persistentVolumeClaim:
            claimName: fsx-deepframe-pvc-dev
        - name: data
          persistentVolumeClaim:
            claimName: open-webui-dev-data
